# hone

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DOGFOOD.md  LICENSE  README.md  TODO.md
.claude/skills/hone/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.hone  ci.yml  pages.hone  pages.yml  release.hone  release.yml  steps.hone
docs/: blog-why-hone.md  cli-reference.md  editor-setup.md  errors.md  getting-started.md  landing-page.md  language-reference.md
docs/advanced/: cache.md  policies.md  secrets.md  typegen.md
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: hone.tmLanguage.json
examples/: app-config.hone  docker-compose.hone  github-actions.hone  hello.hone  kubernetes.hone  mandelbrot.hone
examples/ansible-playbook/: main.hone  vars.hone
examples/ci-pipeline/: actions.hone  main.hone
examples/k8s-validated/: deployment.hone  full-stack.hone  service.hone
examples/microservices/: config.hone  main.hone  resources.hone  schemas.hone
hone-wasm/: Cargo.toml
hone-wasm/src/: lib.rs
hone-wasm/tests/: wasm_tests.rs
lib/k8s/v1.30/: _types.hone  apps.hone  batch.hone  core.hone  rbac.hone
lib/k8s/v1.33/: _meta.hone  apps.hone  core.hone  networking.hone
playground/: README.md  index.html
scripts/: audit.sh  generate-k8s-schemas.py  install.sh  verify-examples.sh
src/: lib.rs  main.rs
src/cache/: mod.rs
src/compiler/: mod.rs
src/differ/: mod.rs
src/emitter/: dotenv.rs  json.rs  mod.rs  toml.rs  yaml.rs
src/errors/: mod.rs
src/evaluator/: builtins.rs  merge.rs  mod.rs  scope.rs  value.rs
src/formatter/: mod.rs
src/graph/: mod.rs
src/importer/: mod.rs
src/lexer/: mod.rs  token.rs
src/lsp/: mod.rs
src/parser/: ast.rs  mod.rs
src/resolver/: mod.rs
src/typechecker/: mod.rs  types.rs
src/typeprovider/: mod.rs
tests/: cli_tests.rs  integration_tests.rs  resolver_integration.rs
tests/fixtures/: complete_example.hone  single_kv.hone
tests/fixtures/imports/: base.hone  child.hone  main.hone  named_import.hone  utils.hone
