[package]
name = "hone-wasm"
version = "0.3.0"
edition = "2021"
description = "WASM bindings for the Hone configuration language"
license = "MIT"
repository = "https://github.com/honelang/hone"
homepage = "https://github.com/honelang/hone"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hone = { package = "hone-lang", path = "..", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
